--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "devDependencies": {
-    "chromedriver": "119.0.1",
-    "eslint": "8.53.0",
-    "mocha": "10.2.0",
-    "prettier": "3.0.3",
-    "selenium-webdriver": "4.15.0"
-  },
-  "dependencies": {
-    "bootstrap": "5.3.2"
-  },
-  "scripts": {
-    "test": "mocha tests/"
-  }
+    "devDependencies": {
+        "eslint": "8.53.0",
+        "mocha": "10.2.0",
+        "prettier": "3.1.0",
+        "puppeteer": "21.5.1"
+    },
+    "dependencies": {
+        "bootstrap": "5.3.2"
+    },
+    "scripts": {
+        "test": "mocha tests/"
+    }
 }
