--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "dependencies": {
         "bootstrap": "5.3.2"
     },
+    "mochaExplorer": {
+        "files": "tests/**/*.js",
+        "cwd": ".",
+        "env": {
+            "NODE_ENV": "test"
+        }
+    },
     "scripts": {
         "test": "mocha tests/"
     }
